[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = ""
authors = ["Azfar Suhail <138823481+azfarsuhail@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
